--- a/src/components/BestSellers/BestSellers.css
+++ b/src/components/BestSellers/BestSellers.css
@@ -35,6 +35,10 @@
   overflow: hidden;
 }
 .container-BestSellers .BestSellers-objs .BestSellers .BestSellers_top .BestSellers_main-info .BestSellers_img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -46,7 +50,7 @@
   left: 19px;
   background-color: rgb(220, 182, 90);
   padding: 2px 15px;
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-SemiBold", sans-serif;
   font-weight: 600;
   font-size: 20px;
   line-height: 100%;
@@ -98,7 +102,7 @@
   display: flex;
   gap: 23px;
   margin-top: 10px;
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Medium", sans-serif;
   font-weight: 500;
   font-size: 14px;
   text-align: center;
@@ -113,13 +117,13 @@
   gap: 12px;
 }
 .container-BestSellers .BestSellers-objs .BestSellers .BestSellers_bottom .BestSellers_bottom-info .BestSellers_price .BestSellers_price_main-price {
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Bold", sans-serif;
   font-weight: 700;
   font-size: 18px;
   color: rgb(34, 34, 34);
 }
 .container-BestSellers .BestSellers-objs .BestSellers .BestSellers_bottom .BestSellers_bottom-info .BestSellers_price .BestSellers_price_old-price {
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Medium", sans-serif;
   font-weight: 500;
   font-size: 18px;
   text-decoration: line-through;
@@ -141,7 +145,7 @@
   justify-content: space-between;
 }
 .container-BestSellers .BestSellers-objs .BestSellers .BestSellers_bottom .BestSellers_action a {
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Medium", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
@@ -245,7 +249,7 @@
     display: flex;
     gap: 20px;
     margin-top: 12px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 14px;
     text-align: center;
@@ -260,13 +264,13 @@
     gap: 12px;
   }
   .container-BestSellers .BestSellers-objs .BestSellers .BestSellers_bottom .BestSellers_bottom-info .BestSellers_price .BestSellers_price_main-price {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Bold", sans-serif;
     font-weight: 700;
     font-size: 18px;
     color: rgb(34, 34, 34);
   }
   .container-BestSellers .BestSellers-objs .BestSellers .BestSellers_bottom .BestSellers_bottom-info .BestSellers_price .BestSellers_price_old-price {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 18px;
     text-decoration: line-through;
@@ -290,7 +294,7 @@
   .container-BestSellers .BestSellers-objs .BestSellers .BestSellers_bottom .BestSellers_action .btn-main {
     background-color: rgb(18, 32, 45);
     padding: 6px 28px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-SemiBold", sans-serif;
     font-weight: 600;
     font-size: 16px;
     color: rgb(255, 255, 255);
@@ -399,7 +403,7 @@
     display: flex;
     gap: 15px;
     margin-top: 8px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 10px;
     text-align: center;
@@ -414,12 +418,12 @@
     gap: 12px;
   }
   .container-BestSellers .BestSellers-objs .BestSellers .BestSellers_bottom .BestSellers_bottom-info .BestSellers_price .BestSellers_price_main-price {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Bold", sans-serif;
     font-weight: 700;
     font-size: 14px;
   }
   .container-BestSellers .BestSellers-objs .BestSellers .BestSellers_bottom .BestSellers_bottom-info .BestSellers_price .BestSellers_price_old-price {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 14px;
     text-decoration: line-through;
@@ -439,7 +443,7 @@
     margin-top: 12px;
   }
   .container-BestSellers .BestSellers-objs .BestSellers .BestSellers_bottom .BestSellers_action .btn-main {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-SemiBold", sans-serif;
     font-weight: 600;
     font-size: 14px;
     padding: 6px 22px;
@@ -448,7 +452,7 @@
   }
   .container-BestSellers .BestSellers-objs .BestSellers .BestSellers_bottom .BestSellers_action a {
     display: none;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
