--- a/src/components/NewProducts/NewProducts.css
+++ b/src/components/NewProducts/NewProducts.css
@@ -32,6 +32,10 @@
   position: relative;
 }
 .container-newproducts .newProducts-objs .newProducts .newProducts_top .newProducts_main-info .newProducts_img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -43,7 +47,7 @@
   left: 19px;
   background-color: rgb(220, 182, 90);
   padding: 2px 15px;
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-SemiBold", sans-serif;
   font-weight: 600;
   font-size: 20px;
   line-height: 100%;
@@ -95,7 +99,7 @@
   display: flex;
   gap: 23px;
   margin-top: 10px;
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Medium", sans-serif;
   font-weight: 500;
   font-size: 14px;
   text-align: center;
@@ -110,13 +114,13 @@
   gap: 12px;
 }
 .container-newproducts .newProducts-objs .newProducts_bottom .newProducts_bottom-info .newProducts_price .newProducts_price_main-price {
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Bold", sans-serif;
   font-weight: 700;
   font-size: 18px;
   color: rgb(34, 34, 34);
 }
 .container-newproducts .newProducts-objs .newProducts_bottom .newProducts_bottom-info .newProducts_price .newProducts_price_old-price {
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Medium", sans-serif;
   font-weight: 500;
   font-size: 18px;
   text-decoration: line-through;
@@ -138,7 +142,7 @@
   justify-content: space-between;
 }
 .container-newproducts .newProducts-objs .newProducts_bottom .newProducts_action a {
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Medium", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
@@ -189,7 +193,7 @@
     left: 18px;
     background-color: rgb(220, 182, 90);
     padding: 2px 15px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-SemiBold", sans-serif;
     font-weight: 600;
     font-size: 20px;
     line-height: 100%;
@@ -241,7 +245,7 @@
     display: flex;
     gap: 20px;
     margin-top: 12px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 14px;
     text-align: center;
@@ -256,13 +260,13 @@
     gap: 12px;
   }
   .container-newproducts .newProducts-objs .newProducts .newProducts_bottom .newProducts_bottom-info .newProducts_price .newProducts_price_main-price {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Bold", sans-serif;
     font-weight: 700;
     font-size: 18px;
     color: rgb(34, 34, 34);
   }
   .container-newproducts .newProducts-objs .newProducts .newProducts_bottom .newProducts_bottom-info .newProducts_price .newProducts_price_old-price {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 18px;
     text-decoration: line-through;
@@ -286,13 +290,13 @@
   .container-newproducts .newProducts-objs .newProducts .newProducts_bottom .newProducts_action .btn-main {
     background-color: rgb(18, 32, 45);
     padding: 6px 28px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-SemiBold", sans-serif;
     font-weight: 600;
     font-size: 16px;
     color: rgb(255, 255, 255);
   }
   .container-newproducts .newProducts-objs .newProducts .newProducts_bottom .newProducts_action a {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
@@ -343,7 +347,7 @@
     left: 8px;
     background-color: rgb(220, 182, 90);
     padding: 4px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-SemiBold", sans-serif;
     font-weight: 600;
     font-size: 12px;
     line-height: 100%;
@@ -395,7 +399,7 @@
     display: flex;
     gap: 15px;
     margin-top: 8px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 10px;
     text-align: center;
@@ -410,12 +414,12 @@
     gap: 12px;
   }
   .container-newproducts .newProducts-objs .newProducts .newProducts_bottom .newProducts_bottom-info .newProducts_price .newProducts_price_main-price {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Bold", sans-serif;
     font-weight: 700;
     font-size: 14px;
   }
   .container-newproducts .newProducts-objs .newProducts .newProducts_bottom .newProducts_bottom-info .newProducts_price .newProducts_price_old-price {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 14px;
     text-decoration: line-through;
@@ -435,7 +439,7 @@
     margin-top: 12px;
   }
   .container-newproducts .newProducts-objs .newProducts .newProducts_bottom .newProducts_action .btn-main {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-SemiBold", sans-serif;
     font-weight: 600;
     font-size: 14px;
     padding: 6px 22px;
@@ -444,7 +448,7 @@
   }
   .container-newproducts .newProducts-objs .newProducts .newProducts_bottom .newProducts_action a {
     display: none;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
