--- a/src/components/WideUsage/WideUsage.scss
+++ b/src/components/WideUsage/WideUsage.scss
@@ -47,10 +47,108 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
   .container-WideUsage {
     margin: 0 auto;
     padding: 0 68px;
+    margin-top: 100px;
+    .WideUsage {
+      display: flex;
+      flex-direction: column;
+      width: 632px;
+      margin: 0 auto;
+      .WideUsage-obj {
+        display: flex;
+        gap: 30px;
+        margin-top: 30px;
+        .WideUsage-img {
+          background-color: rgba(18, 32, 45, 1);
+          border-radius: 100%;
+          padding: 20px 25px;
+          margin-bottom: 32px;
+          align-content: center;
+        }
+        .WideUsage-block {
+          .WideUsage-Name {
+            font-family: $font-medium;
+            font-weight: 500;
+            font-size: 20px;
+            width: 290px;
+            text-transform: uppercase;
+            color: rgba(34, 34, 34, 1);
+            margin-bottom: 16px;
+          }
+          .WideUsage-menu {
+            margin: 0;
+            padding: 0;
+            padding-left: 15px;
+            .WideUsage-menu-items {
+              list-style: disc;
+              margin-bottom: 5px;
+              font-family: $font-regular;
+              font-weight: 400;
+              font-size: 16px;
+              color: rgba(34, 34, 34, 1);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 855px) {
+  .container-WideUsage {
+    margin: 0 auto;
+    padding: 0 68px;
+    margin-top: 100px;
+    .WideUsage {
+      display: flex;
+      flex-direction: column;
+      width: 632px;
+      .WideUsage-obj {
+        display: flex;
+        gap: 80px;
+        .WideUsage-img {
+          background-color: rgba(18, 32, 45, 1);
+          border-radius: 100%;
+          padding: 20px 25px;
+          margin-bottom: 32px;
+          align-content: center;
+        }
+        .WideUsage-block {
+          .WideUsage-Name {
+            font-family: $font-medium;
+            font-weight: 500;
+            font-size: 20px;
+            width: 290px;
+            text-transform: uppercase;
+            color: rgba(34, 34, 34, 1);
+            margin-bottom: 16px;
+          }
+          .WideUsage-menu {
+            margin: 0;
+            padding: 0;
+            padding-left: 15px;
+            .WideUsage-menu-items {
+              list-style: disc;
+              margin-bottom: 5px;
+              font-family: $font-regular;
+              font-weight: 400;
+              font-size: 16px;
+              color: rgba(34, 34, 34, 1);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container-WideUsage {
+    margin: 0 auto;
+    padding: 0 54px;
     margin-top: 100px;
     .WideUsage {
       display: flex;
@@ -95,18 +193,17 @@
   }
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 600px) {
   .container-WideUsage {
     margin: 0 auto;
-    padding: 0 24px;
+    padding: 0 48px;
     margin-top: 100px;
     .WideUsage {
       display: flex;
       flex-direction: column;
-      width: 312px;
+      width: 432px;
       .WideUsage-obj {
         display: flex;
-        gap: 20px;
         .WideUsage-img {
           background-color: rgba(18, 32, 45, 1);
           border-radius: 100%;
@@ -118,7 +215,7 @@
           .WideUsage-Name {
             font-family: $font-medium;
             font-weight: 500;
-            font-size: 20px;
+            font-size: 18px;
             width: 290px;
             text-transform: uppercase;
             color: rgba(34, 34, 34, 1);
@@ -133,7 +230,103 @@
               margin-bottom: 5px;
               font-family: $font-regular;
               font-weight: 400;
-              font-size: 16px;
+              font-size: 14px;
+              color: rgba(34, 34, 34, 1);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 490px) {
+  .container-WideUsage {
+    margin: 0 auto;
+    padding: 0 32px;
+    margin-top: 100px;
+    .WideUsage {
+      display: flex;
+      flex-direction: column;
+      width: 382px;
+      .WideUsage-obj {
+        display: flex;
+        flex-direction: column;
+        width: 300px;
+        .WideUsage-img {
+          background-color: rgba(18, 32, 45, 1);
+          border-radius: 100%;
+          padding: 20px 25px;
+          margin-bottom: 32px;
+          align-content: center;
+        }
+        .WideUsage-block {
+          .WideUsage-Name {
+            font-family: $font-medium;
+            font-weight: 500;
+            font-size: 18px;
+            width: 290px;
+            text-transform: uppercase;
+            color: rgba(34, 34, 34, 1);
+            margin-bottom: 16px;
+          }
+          .WideUsage-menu {
+            margin: 0;
+            padding: 0;
+            padding-left: 15px;
+            .WideUsage-menu-items {
+              list-style: disc;
+              margin-bottom: 5px;
+              font-family: $font-regular;
+              font-weight: 400;
+              font-size: 14px;
+              color: rgba(34, 34, 34, 1);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .container-WideUsage {
+    margin: 0 auto;
+    padding: 0 24px;
+    margin-top: 100px;
+    .WideUsage {
+      display: flex;
+      flex-direction: column;
+      width: 312px;
+      .WideUsage-obj {
+        display: flex;
+        .WideUsage-img {
+          background-color: rgba(18, 32, 45, 1);
+          border-radius: 100%;
+          padding: 20px 25px;
+          margin-bottom: 32px;
+          align-content: center;
+        }
+        .WideUsage-block {
+          .WideUsage-Name {
+            font-family: $font-medium;
+            font-weight: 500;
+            font-size: 18px;
+            width: 290px;
+            text-transform: uppercase;
+            color: rgba(34, 34, 34, 1);
+            margin-bottom: 16px;
+          }
+          .WideUsage-menu {
+            margin: 0;
+            padding: 0;
+            padding-left: 15px;
+            .WideUsage-menu-items {
+              list-style: disc;
+              margin-bottom: 5px;
+              font-family: $font-regular;
+              font-weight: 400;
+              font-size: 14px;
               color: rgba(34, 34, 34, 1);
             }
           }
