--- a/src/components/Advantages/Advantages.css
+++ b/src/components/Advantages/Advantages.css
@@ -8,7 +8,7 @@
   padding: 64px 16px;
 }
 .Advantages-wrapper .Advantages-inner .h2 {
-  font-family: "Nunito Sans", sans-serif;
+  font-family: "NunitoSans-SemiBold", sans-serif;
   font-weight: 600;
   font-size: 32px;
   line-height: 1.2;
@@ -32,7 +32,7 @@
   height: 48px;
 }
 .Advantages-wrapper .Advantages-inner .Advantages-obj .Advantages-Name {
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Medium", sans-serif;
   font-weight: 500;
   font-size: 20px;
   text-transform: uppercase;
