--- a/src/components/Advantages/Advantages.scss
+++ b/src/components/Advantages/Advantages.scss
@@ -50,3 +50,57 @@
     }
   }
 }
+
+@media screen and (max-width: 400px) {
+  .Advantages-wrapper {
+    margin-top: 160px;
+    background-color: rgba(18, 32, 45, 1);
+
+    .Advantages-inner {
+      max-width: 400px;
+      margin: 0 auto;
+      padding: 64px 16px;
+
+      .h2 {
+        font-family: $font-semibold;
+        font-weight: 600;
+        font-size: 32px;
+        line-height: 1.2;
+        color: #fff;
+        margin-bottom: 32px;
+      }
+
+      .Advantages-objs {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(412px, 1fr));
+        gap: 20px;
+        margin-top: 32px;
+        width: 350px;
+      }
+
+      .Advantages-obj {
+        text-align: start;
+        .Advantages-img {
+          margin-bottom: 24px;
+          img {
+            width: 48px;
+            height: 48px;
+          }
+        }
+
+        .Advantages-Name {
+          font-family: $font-medium;
+          font-weight: 500;
+          font-size: 20px;
+          text-transform: uppercase;
+          color: rgba(255, 255, 255, 1);
+          margin-bottom: 19px;
+        }
+
+        .Advantages-Desc {
+          color: rgba(255, 255, 255, 1);
+        }
+      }
+    }
+  }
+}
