--- a/src/components/ChangePassword/ChangePassword.scss
+++ b/src/components/ChangePassword/ChangePassword.scss
@@ -23,7 +23,6 @@
       }
     }
     .ChangePassword-Block {
-      width: 512px;
       background-color: rgba(255, 255, 255, 1);
       padding: 20px;
       margin-top: 28px;
@@ -66,6 +65,79 @@
           width: 100%;
           font-family: $font-semibold;
           border-bottom: 2px solid rgba(220, 182, 90, 1);
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .ChangePassword-wrapper {
+    background-color: rgba(18, 32, 45, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    .ChangePassword-Container {
+      max-width: 1072px;
+      margin: 0 auto;
+      width: 512px;
+      .ChangePassword-Logo {
+        width: 100%;
+        height: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 40px;
+        img {
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+      .ChangePassword-Block {
+        background-color: rgba(255, 255, 255, 1);
+        padding: 20px;
+        margin-top: 28px;
+        h2 {
+          text-align: center;
+        }
+        .ChangePassword-inputs {
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          input {
+            padding: 6px 0px 6px 12px;
+            background-color: rgba(236, 236, 236, 1);
+          }
+          .ChangePassword-btn {
+            background-color: rgba(18, 32, 45, 1);
+            padding: 6px 28px;
+            font-weight: 600;
+            font-size: 12px;
+            color: rgba(255, 255, 255, 1);
+            width: 100%;
+            font-family: $font-semibold;
+            border-bottom: 2px solid rgba(220, 182, 90, 1);
+          }
+        }
+        .ChangePassword-Ok {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          margin-top: 28px;
+          p {
+            text-align: center;
+          }
+          .ChangePassword-btn {
+            background-color: rgba(18, 32, 45, 1);
+            padding: 6px 28px;
+            font-weight: 600;
+            font-size: 1epx;
+            color: rgba(255, 255, 255, 1);
+            width: 100%;
+            font-family: $font-semibold;
+            border-bottom: 2px solid rgba(220, 182, 90, 1);
+          }
         }
       }
     }
