--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -114,3 +114,591 @@
     }
   }
 }
+
+@media screen and (max-width: 965px) {
+  .Footer-wrapper {
+    background-color: rgba(18, 32, 45, 1);
+    padding: 64px 0px;
+    border-bottom: 1px solid rgba(255, 255, 255, 1);
+    .Footer-inner {
+      max-width: 1072px;
+      margin: 0 auto;
+      padding: 0 16px;
+      .Footer-Menus {
+        display: flex;
+        .Footer-Menu {
+          display: flex;
+
+          .Footer-Menu-item-title {
+            color: white;
+          }
+          .Footer-Menu-item {
+            color: white;
+          }
+        }
+        .Footer-Menu-Page {
+          display: flex;
+          flex-direction: column;
+          min-width: 218px;
+          .Footer-Menu-item-title-Page {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            color: rgba(255, 255, 255, 1);
+            margin-bottom: 38px;
+          }
+          .Footer-Menu-Group {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            .Footer-Menu-item {
+              font-family: $font-regular;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 100%;
+              letter-spacing: 0%;
+              color: rgba(255, 255, 255, 1);
+            }
+          }
+        }
+        .Footer-Menu {
+          display: flex;
+          flex-direction: column;
+          min-width: 218px;
+          gap: 12px;
+          .Footer-Menu-item-title {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            color: rgba(255, 255, 255, 1);
+          }
+          .Footer-Menu-item {
+            font-family: $font-regular;
+            font-weight: 400;
+            font-size: 16px;
+            color: rgba(255, 255, 255, 1);
+          }
+        }
+      }
+    }
+  }
+  .Footer-wrapper-nav {
+    background-color: rgba(18, 32, 45, 1);
+    padding: 20px 0;
+    .Footer-inner-nav {
+      max-width: 1072px;
+      margin: 0 auto;
+      padding: 0 16px;
+      .Footer-nav {
+        display: flex;
+        justify-content: space-between;
+        .Footer-img {
+          width: 160px;
+          height: 19px;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .Footer-nav-data {
+          font-family: $font-light;
+          font-weight: 300;
+          font-size: 12px;
+          color: rgba(255, 255, 255, 1);
+          align-self: center;
+        }
+        .Footer-nav-sayt {
+          font-family: $font-light;
+          font-weight: 300;
+          font-size: 12px;
+          text-align: right;
+          color: rgba(255, 255, 255, 1);
+          span {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            text-align: right;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .Footer-wrapper {
+    background-color: rgba(18, 32, 45, 1);
+    padding: 64px 0px;
+    border-bottom: 1px solid rgba(255, 255, 255, 1);
+    .Footer-inner {
+      max-width: 1072px;
+      margin: 0 auto;
+      padding: 0 16px;
+      .Footer-Menus {
+        display: flex;
+        gap: 20px;
+        .Footer-Menu {
+          display: flex;
+
+          .Footer-Menu-item-title {
+            color: white;
+          }
+          .Footer-Menu-item {
+            color: white;
+          }
+        }
+        .Footer-Menu-Page {
+          display: flex;
+          flex-direction: column;
+          min-width: 218px;
+          .Footer-Menu-item-title-Page {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            color: rgba(255, 255, 255, 1);
+            margin-bottom: 38px;
+          }
+          .Footer-Menu-Group {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            .Footer-Menu-item {
+              font-family: $font-regular;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 100%;
+              letter-spacing: 0%;
+              color: rgba(255, 255, 255, 1);
+            }
+          }
+        }
+        .Footer-Menu {
+          display: flex;
+          flex-direction: column;
+          min-width: 218px;
+          gap: 12px;
+          .Footer-Menu-item-title {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            color: rgba(255, 255, 255, 1);
+          }
+          .Footer-Menu-item {
+            font-family: $font-regular;
+            font-weight: 400;
+            font-size: 16px;
+            color: rgba(255, 255, 255, 1);
+          }
+        }
+      }
+    }
+  }
+  .Footer-wrapper-nav {
+    background-color: rgba(18, 32, 45, 1);
+    padding: 20px 0;
+    .Footer-inner-nav {
+      max-width: 1072px;
+      margin: 0 auto;
+      padding: 0 16px;
+      .Footer-nav {
+        display: flex;
+        justify-content: space-between;
+        .Footer-img {
+          width: 160px;
+          height: 19px;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .Footer-nav-data {
+          font-family: $font-light;
+          font-weight: 300;
+          font-size: 12px;
+          color: rgba(255, 255, 255, 1);
+          align-self: center;
+        }
+        .Footer-nav-sayt {
+          font-family: $font-light;
+          font-weight: 300;
+          font-size: 12px;
+          text-align: right;
+          color: rgba(255, 255, 255, 1);
+          span {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            text-align: right;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .Footer-wrapper {
+    background-color: rgba(18, 32, 45, 1);
+    padding: 64px 0px;
+    border-bottom: 1px solid rgba(255, 255, 255, 1);
+    .Footer-inner {
+      max-width: 1072px;
+      margin: 0 auto;
+      padding: 0 16px;
+      .Footer-Menus {
+        display: flex;
+        gap: 0px;
+        .Footer-Menu {
+          display: flex;
+
+          .Footer-Menu-item-title {
+            color: white;
+          }
+          .Footer-Menu-item {
+            color: white;
+          }
+        }
+        .Footer-Menu-Page {
+          display: flex;
+          flex-direction: column;
+          min-width: 200px;
+          margin-bottom: 10px;
+          .Footer-Menu-item-title-Page {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            color: rgba(255, 255, 255, 1);
+            margin-bottom: 38px;
+          }
+          .Footer-Menu-Group {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            .Footer-Menu-item {
+              font-family: $font-regular;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 100%;
+              letter-spacing: 0%;
+              color: rgba(255, 255, 255, 1);
+            }
+          }
+        }
+        .Footer-Menu {
+          display: flex;
+          flex-direction: column;
+          min-width: 200px;
+          gap: 12px;
+          margin-bottom: 10px;
+          .Footer-Menu-item-title {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            color: rgba(255, 255, 255, 1);
+          }
+          .Footer-Menu-item {
+            font-family: $font-regular;
+            font-weight: 400;
+            font-size: 16px;
+            color: rgba(255, 255, 255, 1);
+          }
+        }
+      }
+    }
+  }
+  .Footer-wrapper-nav {
+    background-color: rgba(18, 32, 45, 1);
+    padding: 20px 0;
+    .Footer-inner-nav {
+      max-width: 1072px;
+      margin: 0 auto;
+      padding: 0 16px;
+      .Footer-nav {
+        display: flex;
+        justify-content: space-between;
+        .Footer-img {
+          width: 160px;
+          height: 19px;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .Footer-nav-data {
+          font-family: $font-light;
+          font-weight: 300;
+          font-size: 12px;
+          color: rgba(255, 255, 255, 1);
+          align-self: center;
+        }
+        .Footer-nav-sayt {
+          font-family: $font-light;
+          font-weight: 300;
+          font-size: 12px;
+          text-align: right;
+          color: rgba(255, 255, 255, 1);
+          span {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            text-align: right;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 885px) {
+  .Footer-wrapper {
+    background-color: rgba(18, 32, 45, 1);
+    padding: 64px 0px;
+    border-bottom: 1px solid rgba(255, 255, 255, 1);
+    .Footer-inner {
+      max-width: 1072px;
+      margin: 0 auto;
+      padding: 0 16px;
+      .Footer-Menus {
+        display: flex;
+        gap: 0px;
+        .Footer-Menu {
+          display: flex;
+
+          .Footer-Menu-item-title {
+            color: white;
+          }
+          .Footer-Menu-item {
+            color: white;
+          }
+        }
+        .Footer-Menu-Page {
+          display: flex;
+          flex-direction: column;
+          min-width: 200px;
+          .Footer-Menu-item-title-Page {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            color: rgba(255, 255, 255, 1);
+            margin-bottom: 38px;
+          }
+          .Footer-Menu-Group {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            .Footer-Menu-item {
+              font-family: $font-regular;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 100%;
+              letter-spacing: 0%;
+              color: rgba(255, 255, 255, 1);
+            }
+          }
+        }
+        .Footer-Menu {
+          display: flex;
+          flex-direction: column;
+          min-width: 200px;
+          gap: 12px;
+          .Footer-Menu-item-title {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            color: rgba(255, 255, 255, 1);
+          }
+          .Footer-Menu-item {
+            font-family: $font-regular;
+            font-weight: 400;
+            font-size: 16px;
+            color: rgba(255, 255, 255, 1);
+          }
+        }
+      }
+    }
+  }
+  .Footer-wrapper-nav {
+    background-color: rgba(18, 32, 45, 1);
+    padding: 20px 0;
+    .Footer-inner-nav {
+      max-width: 1072px;
+      margin: 0 auto;
+      padding: 0 16px;
+      .Footer-nav {
+        display: flex;
+        justify-content: space-between;
+        .Footer-img {
+          width: 160px;
+          height: 19px;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .Footer-nav-data {
+          font-family: $font-light;
+          font-weight: 300;
+          font-size: 12px;
+          color: rgba(255, 255, 255, 1);
+          align-self: center;
+        }
+        .Footer-nav-sayt {
+          font-family: $font-light;
+          font-weight: 300;
+          font-size: 12px;
+          text-align: right;
+          color: rgba(255, 255, 255, 1);
+          span {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            text-align: right;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 855px) {
+  .Footer-wrapper {
+    background-color: rgba(18, 32, 45, 1);
+    padding: 64px 50px;
+    border-bottom: 1px solid rgba(255, 255, 255, 1);
+    .Footer-inner {
+      max-width: 1072px;
+      margin: 0 auto;
+      padding: 0 16px;
+      .Footer-Menus {
+        display: flex;
+        flex-direction: column;
+        .Footer-Menu {
+          display: flex;
+
+          .Footer-Menu-item-title {
+            color: white;
+          }
+          .Footer-Menu-item {
+            color: white;
+          }
+        }
+        .Footer-Menu-Page {
+          display: flex;
+          flex-direction: column;
+          min-width: 218px;
+          margin-bottom: 20px;
+          .Footer-Menu-item-title-Page {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            color: rgba(255, 255, 255, 1);
+            margin-bottom: 38px;
+          }
+          .Footer-Menu-Group {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            .Footer-Menu-item {
+              font-family: $font-regular;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 100%;
+              letter-spacing: 0%;
+              color: rgba(255, 255, 255, 1);
+            }
+          }
+        }
+        .Footer-Menu {
+          display: flex;
+          flex-direction: column;
+          min-width: 218px;
+          gap: 12px;
+          margin-bottom: 20px;
+          .Footer-Menu-item-title {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            color: rgba(255, 255, 255, 1);
+          }
+          .Footer-Menu-item {
+            font-family: $font-regular;
+            font-weight: 400;
+            font-size: 16px;
+            color: rgba(255, 255, 255, 1);
+          }
+        }
+      }
+    }
+  }
+  .Footer-wrapper-nav {
+    background-color: rgba(18, 32, 45, 1);
+    padding: 20px 0;
+    .Footer-inner-nav {
+      max-width: 1072px;
+      margin: 0 auto;
+      padding: 0 16px;
+      .Footer-nav {
+        display: flex;
+        justify-content: space-between;
+        .Footer-img {
+          width: 160px;
+          height: 19px;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .Footer-nav-data {
+          font-family: $font-light;
+          font-weight: 300;
+          font-size: 12px;
+          color: rgba(255, 255, 255, 1);
+          align-self: center;
+        }
+        .Footer-nav-sayt {
+          font-family: $font-light;
+          font-weight: 300;
+          font-size: 12px;
+          text-align: right;
+          color: rgba(255, 255, 255, 1);
+          span {
+            font-family: $font-semibold;
+            font-weight: 600;
+            font-size: 12px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            text-align: right;
+          }
+        }
+      }
+    }
+  }
+}
