--- a/src/components/ObjectToBusket/SelectedItem.scss
+++ b/src/components/ObjectToBusket/SelectedItem.scss
@@ -217,34 +217,232 @@
   }
 }
 
-.product-categories-list {
-  display: flex;
-  gap: 16px;
-  margin-top: 32px;
-  .product-category-card {
-    background-color: rgba(217, 217, 217, 1);
-    position: relative;
-    background-position: bottom 0px;
-    background-repeat: no-repeat;
-    background-position: right bottom;
-    border-bottom: 2px solid rgba(18, 32, 45, 1);
-    width: 336px;
-    height: 225px;
-    .product-category-name {
-      word-break: normal;
-      position: absolute;
-      font-family: $font-medium;
-      font-weight: 500;
-      font-size: 20px;
-      text-transform: uppercase;
-      top: 18px;
-      left: 18px;
-      right: 18px;
-    }
-    .btn {
-      position: absolute;
-      bottom: 18px;
-      left: 18px;
+.SelectedItem-categories {
+  max-width: 1072px;
+  margin: 0 auto;
+  padding: 0 16px;
+  margin-top: 160px;
+  .SelectedItem-categories-list {
+    display: flex;
+    gap: 16px;
+    margin-top: 32px;
+    .SelectedItem-category-card {
+      background-color: rgba(217, 217, 217, 1);
+      position: relative;
+      background-position: bottom 0px;
+      background-repeat: no-repeat;
+      background-position: right bottom;
+      border-bottom: 2px solid rgba(18, 32, 45, 1);
+      width: 336px;
+      height: 225px;
+      .SelectedItem-category-name {
+        word-break: normal;
+        position: absolute;
+        font-family: $font-medium;
+        font-weight: 500;
+        font-size: 20px;
+        text-transform: uppercase;
+        top: 18px;
+        left: 18px;
+        right: 18px;
+      }
+      .btn {
+        position: absolute;
+        bottom: 18px;
+        left: 18px;
+      }
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+
+    .SelectedItem-categories-list {
+      display: flex;
+      flex-direction: column;
+
+      .SelectedItem-category-card {
+        background-color: rgba(217, 217, 217, 1);
+        position: relative;
+        background-position: bottom 0px;
+        background-repeat: no-repeat;
+        background-position: right bottom;
+        border-bottom: 2px solid rgba(18, 32, 45, 1);
+        width: 608px;
+        height: 228px;
+      }
+      .SelectedItem-category-name {
+        word-break: normal;
+        position: absolute;
+        font-family: $font-medium;
+        font-weight: 500;
+        font-size: 20px;
+        text-transform: uppercase;
+        top: 18px;
+        left: 18px;
+        right: 18px;
+      }
+      .btn {
+        position: absolute;
+        bottom: 18px;
+        left: 18px;
+      }
+    }
+  }
+
+
+@media screen and (max-width: 677px) {
+
+    h2 {
+      padding: 0 12px;
+    }
+    .SelectedItem-categories-list {
+      display: flex;
+      flex-direction: column;
+      padding: 0 12px;
+
+      .SelectedItem-category-card {
+        background-color: rgba(217, 217, 217, 1);
+        position: relative;
+        background-position: bottom 0px;
+        background-repeat: no-repeat;
+        background-position: right bottom;
+        border-bottom: 2px solid rgba(18, 32, 45, 1);
+        width: 508px;
+        height: 228px;
+        padding: 0 15px;
+      }
+      .SelectedItem-category-name {
+        word-break: normal;
+        position: absolute;
+        font-family: $font-medium;
+        font-weight: 500;
+        font-size: 20px;
+        text-transform: uppercase;
+        top: 18px;
+        left: 18px;
+        right: 18px;
+      }
+      .btn {
+        position: absolute;
+        bottom: 18px;
+        left: 18px;
+      }
+    }
+  }
+
+@media screen and (max-width: 600px) {
+
+    h2 {
+      padding: 0 12px;
+    }
+    .SelectedItem-categories-list {
+      display: flex;
+      flex-direction: column;
+      padding: 0 12px;
+
+      .SelectedItem-category-card {
+        background-color: rgba(217, 217, 217, 1);
+        position: relative;
+        background-position: bottom 0px;
+        background-repeat: no-repeat;
+        background-position: right bottom;
+        border-bottom: 2px solid rgba(18, 32, 45, 1);
+        width: 408px;
+        height: 228px;
+        padding: 0 15px;
+      }
+      .SelectedItem-category-name {
+        word-break: normal;
+        position: absolute;
+        font-family: $font-medium;
+        font-weight: 500;
+        font-size: 20px;
+        text-transform: uppercase;
+        top: 18px;
+        left: 18px;
+        right: 18px;
+      }
+      .btn {
+        position: absolute;
+        bottom: 18px;
+        left: 18px;
+      }
+    }
+  }
+
+@media screen and (max-width: 490px) {
+
+    h2 {
+      padding: 0 12px;
+    }
+    .SelectedItem-categories-list {
+      display: flex;
+      flex-direction: column;
+      padding: 0 12px;
+
+      .SelectedItem-category-card {
+        background-color: rgba(217, 217, 217, 1);
+        position: relative;
+        background-position: bottom 0px;
+        background-repeat: no-repeat;
+        background-position: right bottom;
+        border-bottom: 2px solid rgba(18, 32, 45, 1);
+        width: 308px;
+        height: 228px;
+        padding: 0 15px;
+      }
+      .SelectedItem-category-name {
+        word-break: normal;
+        position: absolute;
+        font-family: $font-medium;
+        font-weight: 500;
+        font-size: 20px;
+        text-transform: uppercase;
+        top: 18px;
+        left: 18px;
+        right: 18px;
+      }
+      .btn {
+        position: absolute;
+        bottom: 18px;
+        left: 18px;
+      }
+    }
+  }
+
+
+@media screen and (max-width: 360px) {
+
+    .SelectedItem-categories-list {
+      display: flex;
+      flex-direction: column;
+      .SelectedItem-category-card {
+        background-color: rgba(217, 217, 217, 1);
+        position: relative;
+        background-position: bottom 0px;
+        background-repeat: no-repeat;
+        background-position: right bottom;
+        border-bottom: 2px solid rgba(18, 32, 45, 1);
+        width: 312px;
+        height: 228px;
+      }
+      .SelectedItem-category-name {
+        word-break: normal;
+        position: absolute;
+        font-family: $font-medium;
+        font-weight: 500;
+        font-size: 20px;
+        text-transform: uppercase;
+        top: 18px;
+        left: 18px;
+        right: 18px;
+      }
+      .btn {
+        position: absolute;
+        bottom: 18px;
+        left: 18px;
+      }
+    }
+  }
+
