--- a/src/components/ProductCategories/ProductCategories.scss
+++ b/src/components/ProductCategories/ProductCategories.scss
@@ -41,7 +41,7 @@
 @media screen and (max-width: 768px) {
   .product-categories {
     margin: 0 auto;
-    padding: 0 68px;
+    padding: 0 50px;
     margin-top: 100px;
     .product-categories-list {
       display: flex;
@@ -56,6 +56,90 @@
         border-bottom: 2px solid rgba(18, 32, 45, 1);
         width: 608px;
         height: 228px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 677px) {
+  .product-categories {
+    margin: 0 auto;
+    padding: 0 42px;
+    margin-top: 100px;
+    h2 {
+      padding: 0 12px;
+    }
+    .product-categories-list {
+      display: flex;
+      flex-direction: column;
+      padding: 0 12px;
+
+      .product-category-card {
+        background-color: rgba(217, 217, 217, 1);
+        position: relative;
+        background-position: bottom 0px;
+        background-repeat: no-repeat;
+        background-position: right bottom;
+        border-bottom: 2px solid rgba(18, 32, 45, 1);
+        width: 508px;
+        height: 228px;
+        padding: 0 15px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .product-categories {
+    margin: 0 auto;
+    padding: 0 38px;
+    margin-top: 100px;
+    h2 {
+      padding: 0 12px;
+    }
+    .product-categories-list {
+      display: flex;
+      flex-direction: column;
+      padding: 0 12px;
+
+      .product-category-card {
+        background-color: rgba(217, 217, 217, 1);
+        position: relative;
+        background-position: bottom 0px;
+        background-repeat: no-repeat;
+        background-position: right bottom;
+        border-bottom: 2px solid rgba(18, 32, 45, 1);
+        width: 408px;
+        height: 228px;
+        padding: 0 15px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 490px) {
+  .product-categories {
+    margin: 0 auto;
+    padding: 0 30px;
+    margin-top: 100px;
+    h2 {
+      padding: 0 12px;
+    }
+    .product-categories-list {
+      display: flex;
+      flex-direction: column;
+      padding: 0 12px;
+
+      .product-category-card {
+        background-color: rgba(217, 217, 217, 1);
+        position: relative;
+        background-position: bottom 0px;
+        background-repeat: no-repeat;
+        background-position: right bottom;
+        border-bottom: 2px solid rgba(18, 32, 45, 1);
+        width: 308px;
+        height: 228px;
+        padding: 0 15px;
       }
     }
   }
