--- a/src/components/SoMayLikePage/SoMayLike.css
+++ b/src/components/SoMayLikePage/SoMayLike.css
@@ -43,7 +43,7 @@
   left: 19px;
   background-color: rgb(220, 182, 90);
   padding: 2px 15px;
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-SemiBold", sans-serif;
   font-weight: 600;
   font-size: 20px;
   line-height: 100%;
@@ -95,7 +95,7 @@
   display: flex;
   gap: 23px;
   margin-top: 10px;
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Medium", sans-serif;
   font-weight: 500;
   font-size: 14px;
   text-align: center;
@@ -110,13 +110,13 @@
   gap: 12px;
 }
 .container-SoMayLike .SoMayLike-objs .SoMayLike_bottom .SoMayLike_bottom-info .SoMayLike_price .SoMayLike_price_main-price {
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Bold", sans-serif;
   font-weight: 700;
   font-size: 18px;
   color: rgb(34, 34, 34);
 }
 .container-SoMayLike .SoMayLike-objs .SoMayLike_bottom .SoMayLike_bottom-info .SoMayLike_price .SoMayLike_price_old-price {
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Medium", sans-serif;
   font-weight: 500;
   font-size: 18px;
   text-decoration: line-through;
@@ -138,7 +138,7 @@
   justify-content: space-between;
 }
 .container-SoMayLike .SoMayLike-objs .SoMayLike_bottom .SoMayLike_action a {
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Medium", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 100%;
@@ -189,7 +189,7 @@
     left: 18px;
     background-color: rgb(220, 182, 90);
     padding: 2px 15px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-SemiBold", sans-serif;
     font-weight: 600;
     font-size: 20px;
     line-height: 100%;
@@ -241,7 +241,7 @@
     display: flex;
     gap: 20px;
     margin-top: 12px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 14px;
     text-align: center;
@@ -256,13 +256,13 @@
     gap: 12px;
   }
   .container-SoMayLike .SoMayLike-objs .SoMayLike .SoMayLike_bottom .SoMayLike_bottom-info .SoMayLike_price .SoMayLike_price_main-price {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Bold", sans-serif;
     font-weight: 700;
     font-size: 18px;
     color: rgb(34, 34, 34);
   }
   .container-SoMayLike .SoMayLike-objs .SoMayLike .SoMayLike_bottom .SoMayLike_bottom-info .SoMayLike_price .SoMayLike_price_old-price {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 18px;
     text-decoration: line-through;
@@ -286,13 +286,13 @@
   .container-SoMayLike .SoMayLike-objs .SoMayLike .SoMayLike_bottom .SoMayLike_action .btn-main {
     background-color: rgb(18, 32, 45);
     padding: 6px 28px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-SemiBold", sans-serif;
     font-weight: 600;
     font-size: 16px;
     color: rgb(255, 255, 255);
   }
   .container-SoMayLike .SoMayLike-objs .SoMayLike .SoMayLike_bottom .SoMayLike_action a {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
@@ -343,7 +343,7 @@
     left: 8px;
     background-color: rgb(220, 182, 90);
     padding: 4px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-SemiBold", sans-serif;
     font-weight: 600;
     font-size: 12px;
     line-height: 100%;
@@ -395,7 +395,7 @@
     display: flex;
     gap: 15px;
     margin-top: 8px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 10px;
     text-align: center;
@@ -410,12 +410,12 @@
     gap: 12px;
   }
   .container-SoMayLike .SoMayLike-objs .SoMayLike .SoMayLike_bottom .SoMayLike_bottom-info .SoMayLike_price .SoMayLike_price_main-price {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Bold", sans-serif;
     font-weight: 700;
     font-size: 14px;
   }
   .container-SoMayLike .SoMayLike-objs .SoMayLike .SoMayLike_bottom .SoMayLike_bottom-info .SoMayLike_price .SoMayLike_price_old-price {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 14px;
     text-decoration: line-through;
@@ -435,7 +435,7 @@
     margin-top: 12px;
   }
   .container-SoMayLike .SoMayLike-objs .SoMayLike .SoMayLike_bottom .SoMayLike_action .btn-main {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-SemiBold", sans-serif;
     font-weight: 600;
     font-size: 14px;
     padding: 6px 22px;
@@ -444,7 +444,7 @@
   }
   .container-SoMayLike .SoMayLike-objs .SoMayLike .SoMayLike_bottom .SoMayLike_action a {
     display: none;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
