--- a/src/components/WideUsage/WideUsage.css
+++ b/src/components/WideUsage/WideUsage.css
@@ -6,7 +6,7 @@
 }
 .container-WideUsage .WideUsage {
   display: flex;
-  gap: 38px;
+  gap: 28px;
   margin-top: 32px;
 }
 .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-img {
@@ -19,7 +19,7 @@
   align-content: center;
 }
 .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-block .WideUsage-Name {
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Medium", sans-serif;
   font-weight: 500;
   font-size: 20px;
   width: 290px;
@@ -35,12 +35,101 @@
 .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-block .WideUsage-menu .WideUsage-menu-items {
   list-style: disc;
   margin-bottom: 5px;
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-Regular", sans-serif;
   font-weight: 400;
   font-size: 16px;
   color: rgb(34, 34, 34);
 }
 
+@media screen and (max-width: 855px) {
+  .container-WideUsage {
+    margin: 0 auto;
+    padding: 0 68px;
+    margin-top: 100px;
+  }
+  .container-WideUsage .WideUsage {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+  }
+  .container-WideUsage .WideUsage .WideUsage-obj {
+    display: flex;
+  }
+  .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-img {
+    background-color: rgb(18, 32, 45);
+    border-radius: 100%;
+    padding: 20px 25px;
+    margin-bottom: 32px;
+    align-content: center;
+  }
+  .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-block .WideUsage-Name {
+    font-family: "NunitoSans-Medium", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    width: 290px;
+    text-transform: uppercase;
+    color: rgb(34, 34, 34);
+    margin-bottom: 16px;
+  }
+  .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-block .WideUsage-menu {
+    margin: 0;
+    padding: 0;
+    padding-left: 15px;
+  }
+  .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-block .WideUsage-menu .WideUsage-menu-items {
+    list-style: disc;
+    margin-bottom: 5px;
+    font-family: "NunitoSans-Regular", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: rgb(34, 34, 34);
+  }
+}
+@media screen and (max-width: 855px) {
+  .container-WideUsage {
+    margin: 0 auto;
+    padding: 0 68px;
+    margin-top: 100px;
+  }
+  .container-WideUsage .WideUsage {
+    display: flex;
+    flex-direction: column;
+    width: 632px;
+  }
+  .container-WideUsage .WideUsage .WideUsage-obj {
+    display: flex;
+    gap: 80px;
+  }
+  .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-img {
+    background-color: rgb(18, 32, 45);
+    border-radius: 100%;
+    padding: 20px 25px;
+    margin-bottom: 32px;
+    align-content: center;
+  }
+  .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-block .WideUsage-Name {
+    font-family: "NunitoSans-Medium", sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    width: 290px;
+    text-transform: uppercase;
+    color: rgb(34, 34, 34);
+    margin-bottom: 16px;
+  }
+  .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-block .WideUsage-menu {
+    margin: 0;
+    padding: 0;
+    padding-left: 15px;
+  }
+  .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-block .WideUsage-menu .WideUsage-menu-items {
+    list-style: disc;
+    margin-bottom: 5px;
+    font-family: "NunitoSans-Regular", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: rgb(34, 34, 34);
+  }
+}
 @media screen and (max-width: 768px) {
   .container-WideUsage {
     margin: 0 auto;
@@ -64,7 +153,7 @@
     align-content: center;
   }
   .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-block .WideUsage-Name {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
     font-size: 20px;
     width: 290px;
@@ -80,7 +169,7 @@
   .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-block .WideUsage-menu .WideUsage-menu-items {
     list-style: disc;
     margin-bottom: 5px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Regular", sans-serif;
     font-weight: 400;
     font-size: 16px;
     color: rgb(34, 34, 34);
@@ -99,7 +188,6 @@
   }
   .container-WideUsage .WideUsage .WideUsage-obj {
     display: flex;
-    gap: 20px;
   }
   .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-img {
     background-color: rgb(18, 32, 45);
@@ -109,9 +197,9 @@
     align-content: center;
   }
   .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-block .WideUsage-Name {
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Medium", sans-serif;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 18px;
     width: 290px;
     text-transform: uppercase;
     color: rgb(34, 34, 34);
@@ -125,9 +213,9 @@
   .container-WideUsage .WideUsage .WideUsage-obj .WideUsage-block .WideUsage-menu .WideUsage-menu-items {
     list-style: disc;
     margin-bottom: 5px;
-    font-family: Nunito Sans;
+    font-family: "NunitoSans-Regular", sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 14px;
     color: rgb(34, 34, 34);
   }
 }/*# sourceMappingURL=WideUsage.css.map */
