--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 /* Reset and base styles  */
+@import "../../node_modules/leaflet/dist/leaflet.css";
 * {
   padding: 0px;
   margin: 0px;
@@ -167,10 +168,20 @@ p {
   padding: 0 16px;
 }
 
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 0 24px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .container {
+    padding: 0 12px;
+  }
+}
 .btn-main {
   background-color: rgb(18, 32, 45);
   padding: 6px 28px;
-  font-family: Nunito Sans;
+  font-family: "NunitoSans-SemiBold", sans-serif;
   font-weight: 600;
   font-size: 16px;
   color: rgb(255, 255, 255);
